Stateful Cache implemenattion
